--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
-  "name": "react-native-yamap",
-  "version": "4.0.2",
-  "description": "Yandex.MapKit and Yandex.Geocoder for react-native",
-  "main": "build/index.js",
-  "scripts": {
-    "prepublishOnly": "rm -rf build && tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "homepage": "https://github.com/volga-volga/react-native-yamap",
-  "keywords": [
-    "react-native",
-    "mapkit",
-    "yandex",
-    "yamap",
-    "polygon",
-    "polyline",
-    "marker",
-    "geocoder"
-  ],
-  "author": "Nikita Sirotkin",
-  "license": "",
-  "dependencies": {},
-  "devDependencies": {
-    "typescript": "^3.8.3",
-    "@types/react": "*",
-    "@types/react-native": "*"
-  },
-  "peerDependencies": {
-    "react": "*",
-    "react-native": "*"
-  }
+	"name": "react-native-yamap",
+	"version": "4.0.2",
+	"description": "Yandex.MapKit and Yandex.Geocoder for react-native",
+	"main": "src/index.ts",
+	"types": "src/index.ts",
+	"scripts": {
+		"prepublishOnly": "rm -rf build && tsc",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"homepage": "https://github.com/volga-volga/react-native-yamap",
+	"keywords": [
+		"react-native",
+		"mapkit",
+		"yandex",
+		"yamap",
+		"polygon",
+		"polyline",
+		"marker",
+		"geocoder"
+	],
+	"author": "Nikita Sirotkin",
+	"license": "",
+	"dependencies": {},
+	"devDependencies": {
+		"typescript": "^3.8.3",
+		"@types/react": "*",
+		"@types/react-native": "*"
+	},
+	"peerDependencies": {
+		"react": "*",
+		"react-native": "*"
+	}
 }
