--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "react-native-yamap",
   "version": "4.0.19",
   "description": "Yandex.MapKit and Yandex.Geocoder for react-native",
-  "main": "build/index.js",
-  "types": "build/index.d.ts",
+  "main": "src/index.ts",
+  "types": "src/index.ts",
   "scripts": {
     "prepublishOnly": "rm -rf build && tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
